Add filter by module type on Repository page

--- a/src/locale/russian.json
+++ b/src/locale/russian.json
@@ -1,6 +1,7 @@
 {
   "module": {
     "type": {
+      "All": "Все модули",
       "Bible": "Библия",
       "Commentary": "Комментарий",
       "Dictionary": "Словарь",
